p2ws_package/Devpp2ws-Package/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Compensation_Tool__c</fullName>
        <description>Displays all the compensation tools that are included in the list</description>
        <label>Compensation Tool</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_TXT_40__c</fullName>
        <description>Displays the concatenated format of equipment, part and condition</description>
        <label>Complaint TXT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Condition_Multi__c</fullName>
        <description>Displays all the available defect condition for equipments (maintenance case)</description>
        <label>Condition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVATE / DEACTIVATE</fullName>
                </value>
                <value>
                    <fullName>ADJUST</fullName>
                </value>
                <value>
                    <fullName>BREAK</fullName>
                </value>
                <value>
                    <fullName>BURST</fullName>
                </value>
                <value>
                    <fullName>CLOG</fullName>
                </value>
                <value>
                    <fullName>COMPLETE / INCOMPLETE</fullName>
                </value>
                <value>
                    <fullName>CONNECT / DISCONNECT</fullName>
                </value>
                <value>
                    <fullName>CONTROL / UNCONTROL</fullName>
                </value>
                <value>
                    <fullName>CHANGE</fullName>
                </value>
                <value>
                    <fullName>DENT</fullName>
                </value>
                <value>
                    <fullName>DEVIATE</fullName>
                </value>
                <value>
                    <fullName>DECLINE</fullName>
                </value>
                <value>
                    <fullName>DISTORT</fullName>
                </value>
                <value>
                    <fullName>ERASE</fullName>
                </value>
                <value>
                    <fullName>FIT</fullName>
                </value>
                <value>
                    <fullName>FIX</fullName>
                </value>
                <value>
                    <fullName>HISSING (NOISE)</fullName>
                </value>
                <value>
                    <fullName>ILLUMINATE</fullName>
                </value>
                <value>
                    <fullName>INOPERATIVE (INOP)</fullName>
                </value>
                <value>
                    <fullName>INSTALL</fullName>
                </value>
                <value>
                    <fullName>JUMP</fullName>
                </value>
                <value>
                    <fullName>LEAK</fullName>
                </value>
                <value>
                    <fullName>LIFT</fullName>
                </value>
                <value>
                    <fullName>LOOSE</fullName>
                </value>
                <value>
                    <fullName>MALFUNCTION</fullName>
                </value>
                <value>
                    <fullName>MISSING</fullName>
                </value>
                <value>
                    <fullName>MOUNT</fullName>
                </value>
                <value>
                    <fullName>OUT OF ORDER</fullName>
                </value>
                <value>
                    <fullName>OVERFLOW</fullName>
                </value>
                <value>
                    <fullName>PEEL OFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <description>mailing address to be a contact point</description>
        <label>Contact Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Country_Code__c</fullName>
        <description>Contry code for cotact address</description>
        <label>Contact Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_txt__c</fullName>
        <description>Contact Email is an email which need to be contact</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Fax_txt__c</fullName>
        <description>Contact Fax is an fax number which need to be contact</description>
        <label>Contact Fax</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <description>Contact Mobile is an mobile number which need to be contact</description>
        <label>Contact Mobile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_txt__c</fullName>
        <description>Contact Name is a peron who be a contact point</description>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_txt__c</fullName>
        <description>Contact Phone is an home phone number which need to be contact</description>
        <label>Contact Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_At_Mobile__c</fullName>
        <label>Created At (Mobile)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By_Crew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By Crew</label>
        <referenceTo>Crew__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_by_Profile__c</fullName>
        <description>Displays the profile used in creating the case</description>
        <formula>CreatedBy.Profile.Name</formula>
        <label>Created by Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrewId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Crew</label>
        <referenceTo>Crew__c</referenceTo>
        <relationshipLabel>Cases (Crew)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_from_Compensation__c</fullName>
        <description>Displays the currency used from the latest compensation record which will be used for Ground Customer Service&apos;s email template</description>
        <label>Currency from Compensation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Date_TH__c</fullName>
        <formula>TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp;CASE(MONTH(TODAY()),1,&quot;มกราคม&quot;,2,&quot;กุมภาพันธ์&quot;,3,&quot;มีนาคม&quot;,4,&quot;เมษายน&quot;,5,&quot;พฤษภาคม&quot;,6,&quot;มิถุนายน&quot;,7,&quot;กรกฎาคม&quot;,8,&quot;สิงหาคม&quot;,9,&quot;กันยายน&quot;,10,&quot;ตุลาคม&quot;,11,&quot;พฤศจิกายน&quot;,12,&quot;ธันวาคม&quot;,&quot;-&quot;) &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY()) + 543)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Date TH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Date__c</fullName>
        <formula>TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp;CASE(MONTH(TODAY()),1,&quot;January&quot;,2,&quot;February&quot;,3,&quot;March&quot;,4,&quot;April&quot;,5,&quot;May&quot;,6,&quot;June&quot;,7,&quot;July&quot;,8,&quot;August&quot;,9,&quot;September&quot;,10,&quot;October&quot;,11,&quot;November&quot;,12,&quot;December&quot;,&quot;-&quot;) &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_ID__c</fullName>
        <formula>$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEP_FLT_TO__c</fullName>
        <description>Displays which flight the aircraft that is related to the case is departing as</description>
        <label>DEP FLT TO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEP_STN__c</fullName>
        <description>Displays the station the aircraft is located in</description>
        <label>DEP STN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGC_DBC_Email_Body__c</fullName>
        <description>Displays the list of passengers and compensations (if availlable) that are related to the case</description>
        <label>DGC DBC Email Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Full_Name_Thai__c</fullName>
        <formula>TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp;

CASE(MONTH(TODAY()),
1, &quot;มกราคม&quot;,
2, &quot;กุมภาพันธ์&quot;,
3, &quot;มีนาคม&quot;, 
4, &quot;เมษายน&quot;, 
5, &quot;พฤษภาคม&quot;, 
6, &quot;มิถุนายน&quot;,
7, &quot;กรกฎาคม&quot;,
8, &quot;สิงหาคม&quot;,
9, &quot;กันยายน&quot;,
10, &quot;ตุลาคม&quot;,
11, &quot;พฤศจิกายน&quot;,
12, &quot;ธันวาคม&quot;,
&quot;&quot;) &amp; &quot; &quot; &amp;

TEXT(YEAR(TODAY()) + 543)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Full Name Thai</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays whether the case is deleted or not</description>
        <label>Delete Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_EN__c</fullName>
        <description>This field is an autorized person&apos;s department in English for Bkk station. Used to be a part of authorized signature.</description>
        <formula>IF(	Owner:User.Station__c != &apos;BKK&apos; &amp;&amp; 
Owner:User.Station__c != &apos;CNX&apos; &amp;&amp; 
Owner:User.Station__c != &apos;HKT&apos; &amp;&amp; 
Owner:User.Station__c != &apos;KBV&apos; &amp;&amp; 
Owner:User.Station__c != &apos;USM&apos;, 
Department_txt__c, 
IF( Text(Authorize_Signature__c) != null, Department_EN_txt__c, Owner:User.Authorized_Department_EN__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_EN_txt__c</fullName>
        <label>Department EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_TH__c</fullName>
        <description>This field is an autorized person&apos;s department in Thai for non-BKK station. Used to be a part of authorized signature.</description>
        <formula>IF(	Owner:User.Station__c != &apos;BKK&apos; &amp;&amp; 
Owner:User.Station__c != &apos;CNX&apos; &amp;&amp; 
Owner:User.Station__c != &apos;HKT&apos; &amp;&amp; 
Owner:User.Station__c != &apos;KBV&apos; &amp;&amp; 
Owner:User.Station__c != &apos;USM&apos;, 
Department_txt__c, 
IF( Text(Authorize_Signature__c) != null, Department_TH_txt__c, Owner:User.Authorized_Department_TH__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department TH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_TH_txt__c</fullName>
        <label>Department TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Displayed authorized person&apos;s department which support for both of BKK and non-BKK. This field is used to be a pert of autorized signatue in email and print feature.</description>
        <formula>IF(	Owner:User.Station__c != &apos;BKK&apos; &amp;&amp; 
	Owner:User.Station__c != &apos;CNX&apos; &amp;&amp; 
	Owner:User.Station__c != &apos;HKT&apos; &amp;&amp; 
	Owner:User.Station__c != &apos;KBV&apos; &amp;&amp;
	Owner:User.Station__c != &apos;USM&apos;,
        Department_txt__c,
	IF(
		Text(Authorize_Signature__c) != null,
		IF(
			Text(Letter_Language__c) == &quot;TH&quot;,
			Department_TH_txt__c ,
			Department_EN_txt__c
		),
	null)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_txt__c</fullName>
        <description>This field is an autorized person&apos;s department for non-BKK station. Used to be a part of authorized signature.</description>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_ma_txt__c</fullName>
        <label>Remark</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_txt__c</fullName>
        <description>Used for display</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMT_Accepted_Passenger__c</fullName>
        <description>Displays the accepted passenger of the flight related to the case</description>
        <formula>IF(Previous_Flight__c &lt;&gt; &quot;&quot;, Previous_Flight__r.Accepted_Passengers__c, Flightid__r.Accepted_Passengers__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMT Accepted Passenger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMT_Aircraft_Configuration_Case__c</fullName>
        <description>Displays the aircraft configuration of the flight related to the case</description>
        <formula>IF(  Previous_Flight__c &lt;&gt; &quot;&quot;,   Previous_Flight__r.Aircraft_Configuration__c ,  Flightid__r.Aircraft_Configuration__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMT_Aircraft Configuration Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMT_Available_Seat__c</fullName>
        <description>Displays the available seats on a plane categorized by travel class (e.g. F10 C20 Y200)</description>
        <formula>IF(Previous_Flight__c &lt;&gt; &quot;&quot;, 
Previous_Flight__r.Available_Seat__c,
Flightid__r.Available_Seat__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Seat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMT_Booking_Passenger__c</fullName>
        <description>Displays the booking passenger of the flight related to the case</description>
        <formula>IF( Previous_Flight__c &lt;&gt; &quot;&quot;, Previous_Flight__r.Booking_Passengers__c, Flightid__r.Booking_Passengers__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMT_Booking Passenger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMT_PNR__c</fullName>
        <description>Displays the PNR of the passenger related to the case</description>
        <formula>Passengerid__r.PNR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMT PNR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMT_Passenger_First_Name__c</fullName>
        <description>Displays the first name of the passenger related to the case</description>
        <formula>Passengerid__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMT Passenger First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMT_Passenger_Last_Name__c</fullName>
        <description>Display sthe last name of the passenger related to the case</description>
        <formula>Passengerid__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMT Passenger Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMT_Saleable_Seats__c</fullName>
        <description>Displays the saleable seats of the flight related to the case</description>
        <formula>IF( Previous_Flight__c &lt;&gt; &quot;&quot;, Previous_Flight__r.Aircraft_Configuration__c,Flightid__r.Aircraft_Configuration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMT Saleable Seats</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effect_Amount__c</fullName>
        <description>Displays the total count of case group members (representative of passengers and equipments)</description>
        <label>Effect Amount</label>
        <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Email_Body_txt__c</fullName>
        <label>Email Body txt</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_To_Case_Key__c</fullName>
        <externalId>true</externalId>
        <label>Email To Case Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Type__c</fullName>
        <label>Emergency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passenger Decease</fullName>
                </value>
                <value>
                    <fullName>Crew Decease</fullName>
                </value>
                <value>
                    <fullName>Severe Passenger Injury</fullName>
                </value>
                <value>
                    <fullName>Severe Crew Injury</fullName>
                </value>
                <value>
                    <fullName>Severe Turbulence</fullName>
                </value>
                <value>
                    <fullName>Slide Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EquipmentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Field_Name__c</field>
                <operation>contains</operation>
                <value>SERVICE EQUIPMENT, SAFETY EQUIPMENT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escalate_Time__c</fullName>
        <description>Displays the date and time the case was escalated</description>
        <label>Escalate Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalate_by_Role__c</fullName>
        <description>Displays the role of the user that escalated the case</description>
        <label>Escalate by (Role)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_by__c</fullName>
        <description>Displays the user that escalated the case</description>
        <label>Escalate by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_to_Closed__c</fullName>
        <label>Escalate to Closed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_to_Investigated__c</fullName>
        <label>Escalate to Investigated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_to_Role__c</fullName>
        <description>Displays the role the case was escalated to</description>
        <label>Escalate to (Role)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_to__c</fullName>
        <description>Displays the destination of the case escalation</description>
        <label>Escalate to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excess_Bag_Ticket_Number__c</fullName>
        <label>Excess Bag Ticket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Flight_Date__c</fullName>
        <description>For future flight which not are in Salesforce yet. System will auto create tack and alert 3 days before passenger fly to notice system to update Case&apos;s Flight.</description>
        <label>Expected Flight Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Flight_Display__c</fullName>
        <description>For future flight which not are in Salesforce yet</description>
        <label>Expected Flight Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Flight_Number__c</fullName>
        <description>For future flight which not are in Salesforce yet</description>
        <label>Expected Flight Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Flight_Sector__c</fullName>
        <description>For future flight which not are in Salesforce yet</description>
        <label>Expected Flight Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_PNR__c</fullName>
        <description>For Passenger PNR of future flight which not are in Salesforce yet</description>
        <label>Expected PNR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FFP_Carrier_F__c</fullName>
        <description>Displays the frequent flyer program carrier of the passenger that is related to the case</description>
        <formula>Passengerid__r.FFP_Carrier__c</formula>
        <label>FFP Carrier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFP_Tier__c</fullName>
        <description>Displays the frequent flyer program tier of the passenger that is related to the case</description>
        <label>FFP Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFP__c</fullName>
        <description>Displays the frequent flyer program of the passenger that is related to the case</description>
        <label>FFP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Handle_Time__c</fullName>
        <description>Displays the date and time of the case is first handled</description>
        <label>First Handle Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Handle_by__c</fullName>
        <description>Displays the user the case is first handled by</description>
        <label>First Handle by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Handled_to_Closed__c</fullName>
        <label>First Handled to Closed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_txt__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Reply_3_Days__c</fullName>
        <formula>IF((First_Reply_Time__c - First_Handle_Time__c)&lt;= 72, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Reply 3 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Reply_48_hrs__c</fullName>
        <formula>IF((First_Reply_Time__c - First_Handle_Time__c)&lt;= 48, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Reply 48 hrs.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Reply_5_Days__c</fullName>
        <formula>IF((First_Reply_Time__c - First_Handle_Time__c)&lt;= 120, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Reply 5 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Reply_By_Role__c</fullName>
        <description>Role of user that reply email to customer of each specific case</description>
        <label>First Reply By Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Reply_By__c</fullName>
        <description>staff that first reply to customer in a specific case</description>
        <label>First Reply By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Reply_Time__c</fullName>
        <description>Time stamp of first reply</description>
        <label>First Reply Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flight_Date_Manual__c</fullName>
        <label>Flight Date Manual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Date_txt__c</fullName>
        <description>Displays the flight date in text format</description>
        <label>Flight Date txt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_From_Manual__c</fullName>
        <label>Flight From Manual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Name_F__c</fullName>
        <description>Displays the flight name as the combination of flight number and flight date</description>
        <formula>Flightid__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Name F</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Name__c</fullName>
        <description>Displays the flight name as the combination of flight number and flight date</description>
        <formula>Flightid__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number_Manual__c</fullName>
        <label>Flight Number Manual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number_for_Email_Template__c</fullName>
        <description>Displays the flight number that is related to the case (if previous flight is available, previous flight is shown. If previous flight is not available, then flight number is shown)</description>
        <formula>IF( Previous_Flight__c  &lt;&gt; &quot;&quot;,  Previous_Flight__r.Name ,  Flightid__r.Name )</formula>
        <label>Flight Number for Email Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number_txt__c</fullName>
        <label>Flight Number txt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Origin_F__c</fullName>
        <formula>IF(NOT(ISBLANK(Flightid__r.Origin__c)),Flightid__r.Origin__c,&quot;Unidentified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Origin F</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Origin_txt__c</fullName>
        <label>Flight Origin txt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_To_Manual__c</fullName>
        <label>Flight To Manual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flightid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the flight that is related to the case</description>
        <label>Flight Number</label>
        <referenceTo>Flight__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Follow up flag will be enabled when customer reply while case status is equal to acknowledge</description>
        <label>Follow up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Green_Case_Count__c</fullName>
        <description>Counts the amount of &apos;Complete&apos; Case Group Member</description>
        <label>Green Case Count</label>
        <summaryFilterItems>
            <field>Case_Group_Member__c.Impact__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ground_Customer_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground Customer Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_CGM__c</fullName>
        <description>Impact value for the primary CGM</description>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Malfunction</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Serviceable</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Serviceable</fullName>
                </value>
                <value>
                    <fullName>Malfunction</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Category_Mobile__c</fullName>
        <description>This is the value from field &quot;inCate&quot; from Mobile Incident Service. It is the indication of Incident Category consisted of &quot;Passenger&quot;, &quot;Service&quot;, &quot;Maintenance&quot;, &quot;Emergency&quot; and &quot;Other&quot;,</description>
        <label>Incident Category Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cabin Log</fullName>
                </value>
                <value>
                    <fullName>Flight Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <formula>IMAGE(
CASE( Status, 
&quot;New&quot;, &quot;/resource/icon_case/Status_New.png&quot;, 
&quot;Escalated&quot;, &quot;/resource/icon_case/Status_Escalate.png&quot;, 
&quot;Waiting for Investigation&quot;, &quot;/resource/icon_case/Status_Waiting_for_Investigation.png&quot;, 
&quot;Waiting for Response&quot;, &quot;/resource/icon_case/Status_Waiting_Customer_Response.png&quot;, 
&quot;Investigated&quot;, &quot;/resource/icon_case/Status_Investigated.png&quot;, 
&quot;Customer Response&quot;, &quot;/resource/icon_case/Status_Customer_Response.png&quot;, 
&quot;Resolved&quot;, &quot;/resource/icon_case/Status_Resolved.png&quot;, 
&quot;Acknowledge&quot;, &quot;/resource/icon_case/Status_Acknowledge.png&quot;, 
&quot;Duplicate&quot;, &quot;/resource/icon_case/Status_Duplicate.png&quot;,
&quot;Closed&quot;, &quot;/resource/icon_case/Status_Closed.png&quot;, 
&quot;Re-Open&quot;, &quot;/resource/icon_case/Status_Reopen.png&quot;,
&quot;/resource/icon_case/Status_New.png&quot;),&quot;&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Reason__c</fullName>
        <label>Integration Error Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investigated_Time__c</fullName>
        <label>Investigated Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>